# entryzen-server

./: README.md  app.py  gunicorn.conf.py  main.ipynb  main.py  pyproject.toml  server.py  tally-ai.ipynb
examples/: sales.txt
notebook/: tally-ai.ipynb  tally-python.ipynb
src/: find_match.py  parse_pdf.py  parse_tally_masters.py  tally_connector.py  verify_df.py
src/tally/: create_masters.py  create_vouchers.py  helpers.py  loadclr.py  parse_tally_xml.py
