[tool.poetry]
name = "data-entry-ai"
version = "0.1.0"
description = ""
authors = ["Laxman Desai <lolopaw24@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
torch = "^2.4.1"
transformers = "^4.44.2"
python-dotenv = "^1.0.1"
numpy = "^2.1.1"
pillow = "^10.4.0"
tqdm = "^4.66.5"
gradio = "^4.44.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
