[tool.poetry]
authors = ["Laxman Desai <lolopaw24@gmail.com>"]
description = ""
license = "MIT"
name = "data-entry-ai"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
gradio = "^5.5.0"
langchain = "^0.3.7"
langchain-community = "^0.3.5"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
lxml = "^5.3.0"
numpy = "^1.26.4"
pandas = "^2.2.3"
pillow = "^11.0.0"
pymupdf = "^1.24.13"
pytesseract = "^0.3.13"
python = "~3.12"
python-dotenv = "^1.0.1"
pythonnet = "^3.0.4"
sentence-transformers = "^3.2.1"
streamlit = "^1.40.0"
torch = "^2.5.1"
tqdm = "^4.67.0"
transformers = "^4.46.2"
unstructured = {extras = ["pdf"], version = "^0.16.5"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[tool.isort]
line_length = 88
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
